--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,19 @@
 ---
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} >
-    <title>Astro</title>
-  </head>
-  <body>
-  <h1>Astro</h1>
-  <h1>My Astro Site</h1>
-</body>
-</html>
+<Header />
+<Navigation />
+
+<h1>Welcome to My Astro Site</h1>
+<p>This is the homepage.</p>
+
+<Footer />
+
+<script type="module">
+  alert('Thanks for visiting my site!');
+</script>
+
 
