Finished layout refactor and blog layout

--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -1,29 +1,20 @@
 ---
-const { title, pubDate, description, author, image, tags } = Astro.props;
+import BaseLayout from './BaseLayout.astro';
+const { title, author, pubDate, image, description } = Astro.props;
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>{title}</title>
-  </head>
-  <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
-
-    <article>
-      <header>
-        <h1>{title}</h1>
-        <p><strong>Published on:</strong> {pubDate}</p>
-        <p><strong>Author:</strong> {author}</p>
-        <p><strong>Description:</strong> {description}</p>
-        <img src={image.url} alt={image.alt} width="300" />
-        <ul>
-          {tags.map(tag => <li>{tag}</li>)}
-        </ul>
-      </header>
+<BaseLayout title={title}>
+  <article>
+    <header>
+      <h1>{title}</h1>
+      <p><strong>By:</strong> {author} | <strong>Published:</strong> {pubDate}</p>
+      {image && (
+        <img src={image.url} alt={image.alt} width="400" />
+      )}
+    </header>
+    <main>
       <slot />
-    </article>
-  </body>
-</html>
+    </main>
+  </article>
+</BaseLayout>
+
