--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,4 +16,14 @@ import Header from '../components/Header.astro';
   alert('Thanks for visiting my site!');
 </script>
 
+---
+import BaseLayout from '../layouts/BaseLayout.astro';
+---
+
+<BaseLayout title="Home Page">
+  <h1>Welcome to My Site</h1>
+  <!-- your content here -->
+</BaseLayout>
+
+
 
